# salary-manager

./: .gitignore  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  samconfig.toml  template.yaml
backend/: Dockerfile  Dockerfile.prod  requirements.txt
backend/api/utils/: colombia_params.ini  source_data.py
backend/app/utils/: colombia_params.ini  colombia_processor.py  source_data.py
backend/core/salary_manager/: asgi.py  settings.py  urls.py
backend/django_project/salary_manager/: settings.py  wsgi.py
docker/backend/: requirements.txt
salary_manager/: lambda_function.py  main.py  requirements.txt
salary_manager/templates/: index.html
salary_manager/utils/: colombia_params.ini  colombia_processor.py  salary_calculator.py
traefik/: traefik.toml
utils/: colombia_processor.py  config.ini  file_processor.py  horas_procesadas.xlsx  nomina (copia).xlsx  nomina.xlsx
web_site/: index.html  script.js
